# openforticli

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac
.github/: SECURITY.md
.github/workflows/: coverity-scan.yml  openforticli.yml
doc/: openforticli.1.in
etc/openforticli/: config.template
etc/ppp/: ip-down.local.example  ip-up.local.example
lib/systemd/system/: openforticli@.service.in
src/: config.c  config.h  hdlc.h  http.c  http.h  io.c  io.h  ipv4.c  ipv4.h  log.c  log.h  main.c  patch.c  patch.h  ssl.h  tunnel.h  userinput.h  xml.h
tests/lint/: line_length.py
